--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-countup": "^6.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -14,6 +15,7 @@
     "react-scripts": "5.0.0",
     "react-ticker": "^1.3.1",
     "react-visibility-sensor": "^5.1.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
